<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
                android:id="@+id/textViewUserProfile"
                android:text="@string/user_profile"
                style="@style/NavTextItem"
                android:background="@drawable/ic_gradient_comedy"/>

        <TextView
                android:id="@+id/textViewArtEntertainment"
                android:text="@string/art_amp_experimental"
                style="@style/NavTextItem"
                android:background="@drawable/ic_gradient_art"/>

        <TextView
                android:id="@+id/textViewNewsPolitics"
                style="@style/NavTextItem"
                android:text="@string/news_amp_politics"
                android:background="@drawable/ic_gradient_politics"/>
        <TextView
                android:id="@+id/textViewFitness"
                android:text="@string/health_amp_fitness"
                style="@style/NavTextItem"
                android:background="@drawable/ic_gradient_fitness"/>
        <TextView
                android:id="@+id/textViewFashion"
                android:text="@string/beauty_amp_fashion"
                style="@style/NavTextItem"
                android:background="@drawable/ic_gradient_fashion"/>
        <TextView
                android:id="@+id/textViewFamily"
                android:text="@string/family"
                style="@style/NavTextItem"
                android:background="@drawable/ic_gradient_family"/>
        <TextView
                android:id="@+id/textViewSport"
                android:text="@string/sports"
                style="@style/NavTextItem"
                android:background="@drawable/ic_gradient_sport"/>
        <TextView
                android:id="@+id/textViewPets"
                android:text="@string/pets_amp_animals"
                style="@style/NavTextItem"
                android:background="@drawable/ic_gradient_pets"/>
        <TextView
                android:id="@+id/textViewTv"
                android:text="@string/tv_shows"
                style="@style/NavTextItem"
                android:background="@drawable/ic_gradient_tv"/>
        <TextView
                android:id="@+id/textViewMovies"
                android:text="@string/movies"
                style="@style/NavTextItem"
                android:background="@drawable/ic_gradient_movies"/>
    <TextView
                android:id="@+id/textViewBooks"
                android:text="@string/books"
                style="@style/NavTextItem"
                android:background="@drawable/ic_gradient_books"/>
    <TextView
                android:id="@+id/textViewLogout"
                android:text="@string/logout"
                style="@style/NavTextItem"
                android:background="@drawable/ic_gradient_logout"/>
    </LinearLayout>
</ScrollView>