<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:layout_gravity="center"
            android:src="@drawable/ic_1"
            android:scaleType="centerCrop"
            android:contentDescription="@string/app_name"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_gradient_frame"
            android:orientation="vertical">
        <TextView
                android:id="@+id/textViewTopMsg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:padding="16dp"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="32sp"
                android:text="@string/top_msg"
        />
        <TextView
                android:id="@+id/textViewPublishedDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:textStyle="italic"
                android:text="@string/published_date"
                tools:ignore="RtlSymmetry"/>
        <Space
                android:layout_width="match_parent"
                android:layout_height="100dp"/>
        <TextView
                android:id="@+id/textViewBottomMsg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:padding="16dp"
                android:textAllCaps="false"
                android:textSize="12sp"
                android:textStyle="italic"
                android:maxLines="2"
                android:lineSpacingExtra="2dp"
                android:ellipsize="end"
                android:text="@string/bottom_msg"
        />

    </LinearLayout>
</FrameLayout>