<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_gradient"
        tools:context=".ui.activity.LoginActivity">

    <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:fontFamily="@font/alleyster"
            android:textSize="35sp"
            android:textColor="@color/colorWhite"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.097"
            app:layout_constraintHorizontal_bias="0.498"/>
    <LinearLayout
            app:layout_constraintTop_toBottomOf="@id/textViewTitle"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:layout_marginTop="25dp"
            android:paddingBottom="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/linearLayout">
        <EditText
                android:id="@+id/editUserName"
                style="@style/EditText"
                android:drawableStart="@drawable/ic_username"
                android:drawablePadding="10dp"
                android:inputType="text|textCapSentences"
                android:imeOptions="actionNext"
                android:hint="@string/hint_username"
                tools:ignore="Autofill,TextFields"/>
        <EditText
                android:id="@+id/editUserPassword"
                style="@style/EditText"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="10dp"
                android:layout_marginTop="5dp"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:hint="@string/hint_password"
                tools:ignore="Autofill,TextFields"/>

    </LinearLayout>
    <TextView
            android:text="@string/forgot_your_password"
            android:id="@+id/textView"
            style="@style/TextView"
            app:layout_constraintBottom_toTopOf="@+id/buttonSignIn"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="1"/>
    <Button
            android:text="@string/sign_in"
            style="@style/Button"
            android:id="@+id/buttonSignIn"
            android:layout_marginBottom="28dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:textAllCaps="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>