<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
        app:cardCornerRadius="@dimen/cardview_default_radius"
        app:cardUseCompatPadding="false"
        android:layout_height="wrap_content">
    <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
                android:id="@+id/textTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:text="@string/logout"
                android:paddingStart="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textStyle="bold"/>
        <TextView
                android:id="@+id/textBodyMsg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:text="@string/msg_logout"
                android:paddingStart="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textStyle="normal"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="10dp"
                android:orientation="horizontal">
            <TextView
                    android:id="@+id/textCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:padding="10dp"
                    android:textAllCaps="true"
                    android:textColor="@color/colorAccent"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
            <TextView
                    android:id="@+id/textYes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:padding="10dp"
                    android:textAllCaps="true"
                    android:layout_marginEnd="20sp"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/colorAccent"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>