<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent"
        tools:context=".ui.activity.BlogDetailsActivity">
    <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:background="@color/colorWhite"
                android:layout_height="match_parent">
            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="300dp">

                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_1"
                        android:contentDescription="@string/app_name"/>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:gravity="bottom"
                        android:background="@drawable/ic_gradient_frame"
                        android:orientation="vertical"
                        android:layout_height="match_parent">
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/top_msg"
                            android:textSize="32sp"
                            android:textColor="@color/colorWhite"
                            android:textStyle="bold"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"/>
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/published_date"
                            android:textSize="12sp"
                            android:textColor="@color/colorGray"
                            android:textStyle="italic"
                            android:layout_marginBottom="15dp"
                            android:layout_marginTop="30dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"/>
                </LinearLayout>

            </FrameLayout>

            <TextView
                    android:id="@+id/textViewContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="16dp"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_format_quote"
                        android:contentDescription="@string/app_name"/>
                <TextView
                        android:id="@+id/textViewContainer1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:gravity="top"
                        android:textStyle="italic"
                        android:layout_marginTop="10dp"
                        android:textSize="14sp"
                        android:drawablePadding="10dp"
                        android:text="@string/body_msg_7"/>
            </LinearLayout>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:alpha=".6"
                    android:background="@color/colorGray"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:id="@+id/parentConstraint"
                    android:layout_height="wrap_content">
                <TextView
                        android:id="@+id/textViewWritten"
                        android:layout_width="match_parent"
                        app:layout_constraintStart_toStartOf="@id/parentConstraint"
                        app:layout_constraintEnd_toEndOf="@id/parentConstraint"
                        app:layout_constraintTop_toTopOf="@id/parentConstraint"
                        android:text="@string/written_by"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:layout_marginStart="16dp"
                        android:layout_height="wrap_content"
                />
                <TextView
                        android:id="@+id/textViewWriterName"
                        android:layout_width="match_parent"
                        app:layout_constraintStart_toStartOf="@id/parentConstraint"
                        app:layout_constraintEnd_toEndOf="@id/parentConstraint"
                        app:layout_constraintTop_toBottomOf="@id/textViewWritten"
                        android:text="@string/dudly_marion"
                        android:textAllCaps="true"
                        android:layout_marginStart="16dp"
                        android:textSize="25sp"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:id="@+id/textViewTwitter"
                        android:layout_width="wrap_content"
                        app:layout_constraintStart_toStartOf="@id/parentConstraint"
                        app:layout_constraintTop_toBottomOf="@id/textViewWriterName"
                        android:text="@string/twitter"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:layout_marginStart="16dp"
                        android:layout_height="wrap_content"
                />
                <TextView
                        android:id="@+id/textViewFacebook"
                        android:layout_width="wrap_content"
                        app:layout_constraintStart_toEndOf="@id/textViewTwitter"
                        app:layout_constraintTop_toBottomOf="@id/textViewWriterName"
                        android:text="@string/facebook"
                        android:paddingStart="15dp"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:layout_height="wrap_content"
                        tools:ignore="RtlSymmetry"/>
                <TextView
                        android:id="@+id/textViewGoogle"
                        android:layout_width="wrap_content"
                        app:layout_constraintStart_toEndOf="@id/textViewFacebook"
                        app:layout_constraintTop_toBottomOf="@id/textViewWriterName"
                        android:text="@string/google"
                        android:paddingStart="15dp"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:layout_height="wrap_content"
                        tools:ignore="RtlSymmetry"/>
                <TextView
                        android:id="@+id/textViewWrittenBody"
                        android:layout_width="match_parent"
                        app:layout_constraintStart_toStartOf="@id/parentConstraint"
                        app:layout_constraintEnd_toEndOf="@id/parentConstraint"
                        app:layout_constraintTop_toBottomOf="@id/textViewGoogle"
                        android:text="@string/body_msg_3"
                        android:textSize="14sp"
                        android:layout_marginStart="16dp"
                        android:textStyle="italic"
                        android:layout_marginTop="10dp"
                        android:layout_height="wrap_content"
                />
                <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:id="@+id/separator"
                        android:background="@color/colorGray"
                        app:layout_constraintStart_toStartOf="@id/parentConstraint"
                        app:layout_constraintTop_toBottomOf="@id/textViewWrittenBody"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:background="@drawable/ic_edittext_outline"
                        android:paddingStart="12dp"
                        android:layout_marginEnd="16dp"
                        android:hint="@string/write_your_comment"
                        android:layout_marginTop="30dp"
                        android:gravity="top|start"
                        android:paddingTop="10dp"
                        android:layout_marginStart="16dp"
                        android:id="@+id/editTextComment"
                        android:paddingEnd="12dp"
                        android:textSize="12sp"
                        android:inputType="textMultiLine"
                        app:layout_constraintStart_toStartOf="@id/parentConstraint"
                        app:layout_constraintTop_toBottomOf="@+id/separator" tools:ignore="Autofill,TextFields"/>

                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="@string/send"
                        style="@style/Button"
                        android:id="@+id/buttonSend"
                        android:textAllCaps="true"
                        android:layout_marginStart="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/editTextComment"
                        app:layout_constraintStart_toStartOf="@id/parentConstraint"
                        android:layout_marginTop="16dp"

                />
                <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:id="@+id/separator2"
                        android:background="@color/colorGray"
                        android:layout_marginTop="20dp"
                        app:layout_constraintStart_toStartOf="@id/parentConstraint"
                        app:layout_constraintTop_toBottomOf="@id/buttonSend"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Related"
                        android:textAllCaps="true"
                        android:textStyle="bold"
                        android:layout_marginTop="20dp"
                        android:id="@+id/textViewRelated"
                        android:layout_marginStart="16dp"
                        app:layout_constraintStart_toStartOf="@id/parentConstraint"
                        app:layout_constraintTop_toBottomOf="@id/separator2"
                />
                <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/recyclerDetails"
                        tools:listitem="@layout/item_home_list"
                        app:layout_constraintStart_toStartOf="@id/parentConstraint"
                        app:layout_constraintTop_toBottomOf="@+id/textViewRelated"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>